[package]
name = "eduka-downloader-nextgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.11", features = ["cookies", "json"]}
serde_json = "1"
serde = { version = "1.0.100", features = ["derive"] }
url = "2.3.1"
clap = { version = "4.1.6", features = ["derive"] }
thiserror = "1.0.38"
lopdf = "0.29.0"
unidecode = "0.3.0"
